--- a/totalhr.Resources/Resources/Error.resx
+++ b/totalhr.Resources/Resources/Error.resx
@@ -135,6 +135,9 @@
   <data name="Error_Could_Not_Save_Picture" xml:space="preserve">
     <value>Could not save profile picture.</value>
   </data>
+  <data name="Error_Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="Error_File_Type" xml:space="preserve">
     <value>Only files with the following extensions are allowed:</value>
   </data>
