--- a/totalhr.Resources/Resources/Document.resx
+++ b/totalhr.Resources/Resources/Document.resx
@@ -399,4 +399,19 @@
   <data name="Error_No_Recipient_Specified" xml:space="preserve">
     <value>No recipient specified</value>
   </data>
+  <data name="V_Documents" xml:space="preserve">
+    <value>Documents</value>
+  </data>
+  <data name="V_Search_For_Document" xml:space="preserve">
+    <value>Search For Document</value>
+  </data>
+  <data name="V_Search_For_Folder" xml:space="preserve">
+    <value>Search For Folder</value>
+  </data>
+  <data name="V_View_As_Table" xml:space="preserve">
+    <value>View as Table</value>
+  </data>
+  <data name="V_View_In_Folder" xml:space="preserve">
+    <value>View In Folders</value>
+  </data>
 </root>
