--- a/totalhr.Resources/Resources/FormGenerator.resx
+++ b/totalhr.Resources/Resources/FormGenerator.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error_Could_Not_Save_Data" xml:space="preserve">
+    <value>Error could not save form!</value>
+  </data>
   <data name="V_Angular_Form_Header" xml:space="preserve">
     <value>Angular Form Generator</value>
   </data>
+  <data name="V_Form_Create_New" xml:space="preserve">
+    <value>Form Creation</value>
+  </data>
   <data name="V_Form_Data" xml:space="preserve">
     <value>Form Data</value>
+  </data>
+  <data name="V_Form_Editor" xml:space="preserve">
+    <value>Form Editor</value>
   </data>
   <data name="V_Form_Id" xml:space="preserve">
     <value>Id</value>
@@ -146,6 +155,9 @@
   </data>
   <data name="V_Invalid" xml:space="preserve">
     <value>Invalid</value>
+  </data>
+  <data name="V_Template_List" xml:space="preserve">
+    <value>Template List</value>
   </data>
   <data name="V_Used_By_TotalHR" xml:space="preserve">
     <value>Used for TotalHR.</value>
