tidying up layouts

--- a/totalhr.Resources/Resources/Payroll.resx
+++ b/totalhr.Resources/Resources/Payroll.resx
@@ -117,169 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btn_Loggout" xml:space="preserve">
-    <value>Logout</value>
-  </data>
-  <data name="MSG_Welcome" xml:space="preserve">
-    <value>Dear {0}, &lt;br/&gt; Welcome to your account. &lt;br/&gt;Please choose an option to start.</value>
-  </data>
-  <data name="tt_My_Calendars" xml:space="preserve">
-    <value>My Calendars</value>
-  </data>
-  <data name="tt_Personal_Details" xml:space="preserve">
-    <value>Personal Details</value>
-  </data>
-  <data name="tt_My_Documents" xml:space="preserve">
-    <value>Company Documents</value>
-  </data>
-  <data name="V_Department" xml:space="preserve">
-    <value>Department</value>
-  </data>
-  <data name="V_Email" xml:space="preserve">
-    <value>Email</value>
-  </data>
-  <data name="V_Firstname" xml:space="preserve">
-    <value>Firstname</value>
-  </data>
-  <data name="V_Mobile" xml:space="preserve">
-    <value>Mobile</value>
-  </data>
-  <data name="V_Other_Names" xml:space="preserve">
-    <value>Other Names</value>
-  </data>
-  <data name="V_Phone" xml:space="preserve">
-    <value>Phone</value>
-  </data>
-  <data name="V_Profile_View" xml:space="preserve">
-    <value>Profile View</value>
-  </data>
-  <data name="V_Surname" xml:space="preserve">
-    <value>Surname</value>
-  </data>
-  <data name="V_Title" xml:space="preserve">
-    <value>Title</value>
-  </data>
-  <data name="V_Email1" xml:space="preserve">
-    <value>Email</value>
-  </data>
-  <data name="V_UserId" xml:space="preserve">
-    <value>User Id</value>
-  </data>
-  <data name="V_UserName" xml:space="preserve">
-    <value>Username</value>
-  </data>
-  <data name="V_User_FullName" xml:space="preserve">
-    <value>Full Name</value>
-  </data>
-  <data name="V_Gender" xml:space="preserve">
-    <value>Gender</value>
-  </data>
-  <data name="V_LastVisit" xml:space="preserve">
-    <value>Last Visit</value>
-  </data>
-  <data name="V_No_Visits" xml:space="preserve">
-    <value>No of Visits</value>
-  </data>
-  <data name="V_Calendars" xml:space="preserve">
-    <value>Calendars</value>
-  </data>
-  <data name="V_Documents" xml:space="preserve">
-    <value>Documents</value>
-  </data>
-  <data name="MSG_User_Created" xml:space="preserve">
-    <value>You have successfully created the employee {0}. &lt;br/&gt; You will also need to assign some profiles to this employee as no user can access the system without profiles. Select one of the options below to continue.</value>
-  </data>
-  <data name="V_User_Created" xml:space="preserve">
-    <value>User Created</value>
-  </data>
-  <data name="V_Admin_Login" xml:space="preserve">
-    <value>Admin Login</value>
-  </data>
-  <data name="V_Forgot_Password" xml:space="preserve">
-    <value>Forgot Password?</value>
-  </data>
-  <data name="V_Password" xml:space="preserve">
-    <value>Password</value>
-  </data>
-  <data name="V_PasswordReset_Intro" xml:space="preserve">
-    <value>Enter your e-mail address below to reset your password.</value>
-  </data>
-  <data name="V_Remember_Me" xml:space="preserve">
-    <value>Remember Me</value>
-  </data>
-  <data name="V_Submit" xml:space="preserve">
-    <value>Submit</value>
-  </data>
-  <data name="V_User_Login" xml:space="preserve">
-    <value>User Login</value>
-  </data>
-  <data name="V_Company" xml:space="preserve">
-    <value>Company</value>
-  </data>
-  <data name="V_Create_Document" xml:space="preserve">
-    <value>Create Document</value>
-  </data>
-  <data name="V_Dashboard" xml:space="preserve">
-    <value>Dashboard</value>
-  </data>
-  <data name="V_Departments" xml:space="preserve">
-    <value>Departments</value>
-  </data>
-  <data name="V_Folders" xml:space="preserve">
-    <value>Folders</value>
-  </data>
-  <data name="V_Image_Gallery" xml:space="preserve">
-    <value>Image Gallery</value>
-  </data>
-  <data name="V_Inbox" xml:space="preserve">
-    <value>Inbox</value>
-  </data>
-  <data name="V_My_Absences" xml:space="preserve">
-    <value>My Absences</value>
-  </data>
-  <data name="V_My_Contract" xml:space="preserve">
-    <value>My Contract</value>
-  </data>
-  <data name="V_My_Profile" xml:space="preserve">
-    <value>My Profile</value>
-  </data>
-  <data name="V_My_Profiles" xml:space="preserve">
-    <value>My Permissions</value>
-  </data>
-  <data name="V_Notifications" xml:space="preserve">
-    <value>Notifications</value>
-  </data>
   <data name="V_Payroll" xml:space="preserve">
     <value>Payroll</value>
   </data>
-  <data name="V_Record_Time" xml:space="preserve">
-    <value>Record Time</value>
-  </data>
-  <data name="V_Request_Absence" xml:space="preserve">
-    <value>Request Absence</value>
-  </data>
-  <data name="V_Search_For_Recording" xml:space="preserve">
-    <value>Search</value>
-  </data>
-  <data name="V_Structure" xml:space="preserve">
-    <value>Structure</value>
-  </data>
-  <data name="V_Tasks" xml:space="preserve">
-    <value>My Tasks</value>
-  </data>
-  <data name="V_Time_Recording" xml:space="preserve">
-    <value>Time Recording</value>
-  </data>
-  <data name="V_Users" xml:space="preserve">
-    <value>Users</value>
-  </data>
-  <data name="V_View_All_Absences" xml:space="preserve">
-    <value>View All</value>
-  </data>
-  <data name="V_Employee_Directory" xml:space="preserve">
-    <value>Employee Directory</value>
-  </data>
-  <data name="V_Profile" xml:space="preserve">
-    <value>Profile</value>
+  <data name="V_Payroll_Number" xml:space="preserve">
+    <value>Payroll Number</value>
   </data>
 </root>
