--- a/totalhr.Resources/Resources/Gallery.resx
+++ b/totalhr.Resources/Resources/Gallery.resx
@@ -117,131 +117,52 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Error_Template_Creator_Rq" xml:space="preserve">
-    <value>No valid user for template creation.</value>
+  <data name="V_Album_Details" xml:space="preserve">
+    <value>Album Details</value>
   </data>
-  <data name="Error_Template_Form_Rq" xml:space="preserve">
-    <value>You need to select a form for a template.</value>
-  </data>
-  <data name="Error_Template_Name_Rq" xml:space="preserve">
-    <value>Template name is required.</value>
-  </data>
-  <data name="Error_Template_Not_Found" xml:space="preserve">
-    <value>Sorry but no template has been found.</value>
-  </data>
-  <data name="V_Contract_Management" xml:space="preserve">
-    <value>Contract Management</value>
-  </data>
-  <data name="V_Created" xml:space="preserve">
-    <value>Created </value>
+  <data name="V_Album_Name" xml:space="preserve">
+    <value>Name</value>
   </data>
   <data name="V_Created_By" xml:space="preserve">
     <value>Created By</value>
   </data>
-  <data name="V_Create_Form" xml:space="preserve">
-    <value>Create Form</value>
+  <data name="V_Created_On" xml:space="preserve">
+    <value>Created On</value>
   </data>
-  <data name="V_Create_Template" xml:space="preserve">
-    <value>Create Template</value>
+  <data name="V_Create_Album" xml:space="preserve">
+    <value>Create Album</value>
   </data>
   <data name="V_Description" xml:space="preserve">
     <value>Description</value>
   </data>
-  <data name="V_Edit_Template" xml:space="preserve">
-    <value>Edit Template</value>
+  <data name="V_Gallery" xml:space="preserve">
+    <value>Photo Gallery</value>
   </data>
-  <data name="V_Form" xml:space="preserve">
-    <value>Form</value>
+  <data name="V_Gallery_Albums" xml:space="preserve">
+    <value>Photo Albums</value>
   </data>
-  <data name="V_Last_Updated" xml:space="preserve">
-    <value>Last Updated</value>
+  <data name="V_List_Of_Albums" xml:space="preserve">
+    <value>List of Albums</value>
   </data>
-  <data name="V_Last_Updated_By" xml:space="preserve">
-    <value>Last Updated By</value>
+  <data name="V_No_Photo" xml:space="preserve">
+    <value>Photos</value>
   </data>
-  <data name="V_New_Form" xml:space="preserve">
-    <value>New Form</value>
+  <data name="V_View" xml:space="preserve">
+    <value>View</value>
   </data>
-  <data name="V_Save_Template" xml:space="preserve">
-    <value>Save Template</value>
+  <data name="V_Add_Photo_ToAlbum" xml:space="preserve">
+    <value>Add Photo</value>
   </data>
-  <data name="V_Template_Create" xml:space="preserve">
-    <value>Template Create</value>
+  <data name="V_Album_View" xml:space="preserve">
+    <value>Album View</value>
   </data>
-  <data name="V_Template_Details" xml:space="preserve">
-    <value>Template Details</value>
+  <data name="V_Error_No_Album_Found" xml:space="preserve">
+    <value>Sorry but no album found in the database!</value>
   </data>
-  <data name="V_Template_Details_Intro" xml:space="preserve">
-    <value>A contract template is a form that needs to be filled by an admin user. The employee can only see a completed form as his/her contract once the template has been attached to the contract. &lt;br/&gt;If you want to attach an existing form to your contract as template, please go back to the contract and select an existing form template then attach it accordingly.&lt;br/&gt; Click on the button below to open the form editor and create your form. This will launch a popup window.</value>
+  <data name="V_Error_No_Photo_For_Album" xml:space="preserve">
+    <value>Sorry but no photo for this album!</value>
   </data>
-  <data name="V_Template_Id" xml:space="preserve">
-    <value>Template Id</value>
-  </data>
-  <data name="V_Template_Name" xml:space="preserve">
-    <value>Template Name</value>
-  </data>
-  <data name="Error_Select_User" xml:space="preserve">
-    <value>You must select a user to proceed.</value>
-  </data>
-  <data name="Error_Template_Not_Selected" xml:space="preserve">
-    <value>You need to select a template before proceeding.</value>
-  </data>
-  <data name="V_Contract_Management_SelUser" xml:space="preserve">
-    <value>Contract Management (Select user)</value>
-  </data>
-  <data name="V_Save_Contract" xml:space="preserve">
-    <value>Save Contract</value>
-  </data>
-  <data name="V_User_Contract" xml:space="preserve">
-    <value>User Contract</value>
-  </data>
-  <data name="V_User_Name" xml:space="preserve">
-    <value>User Name</value>
-  </data>
-  <data name="Error_Admin_UserId_Rq" xml:space="preserve">
-    <value>You must be a valid admin user to create contract.</value>
-  </data>
-  <data name="Error_Template_Rq" xml:space="preserve">
-    <value>Template is required.</value>
-  </data>
-  <data name="Error_User_Req" xml:space="preserve">
-    <value>User is required.</value>
-  </data>
-  <data name="V_Contract_Edit" xml:space="preserve">
-    <value>Contract Edit </value>
-  </data>
-  <data name="V_Contract_Saved" xml:space="preserve">
-    <value>Contract details saved successfully!</value>
-  </data>
-  <data name="V_Submit" xml:space="preserve">
-    <value>Submit</value>
-  </data>
-  <data name="Error_Form_Data" xml:space="preserve">
-    <value>Please enter all required form data!</value>
-  </data>
-  <data name="Error_Form_Req" xml:space="preserve">
-    <value>Form is required</value>
-  </data>
-  <data name="V_Publish" xml:space="preserve">
-    <value>Publish Contract</value>
-  </data>
-  <data name="V_Publish_Info" xml:space="preserve">
-    <value>If you publish this contract then the user will be able to view its details.</value>
-  </data>
-  <data name="V_Contracts" xml:space="preserve">
-    <value>Contracts</value>
-  </data>
-  <data name="V_Contract_Choose_User_Intro" xml:space="preserve">
-    <value>In order to create a contract for a user, you need to select a user from the list below or search for a user.&lt;br /&gt;
-                    Once a user is found, you can edit or create a contract for this user.</value>
-  </data>
-  <data name="V_Contract_Select_User" xml:space="preserve">
-    <value>Select User</value>
-  </data>
-  <data name="V_User_Contract_Details" xml:space="preserve">
-    <value>Contract Details for '{0}'</value>
-  </data>
-  <data name="V_Fill_Contract_Form" xml:space="preserve">
-    <value>Fill Contract Form</value>
+  <data name="V_Photo_Upload" xml:space="preserve">
+    <value>Photo Upload</value>
   </data>
 </root>
