--- a/totalhr.Resources/Resources/Payroll.resx
+++ b/totalhr.Resources/Resources/Payroll.resx
@@ -117,10 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="V_Account_Name" xml:space="preserve">
+    <value>Account Name</value>
+  </data>
+  <data name="V_Account_Number" xml:space="preserve">
+    <value>Account Number</value>
+  </data>
+  <data name="V_Bank_Address" xml:space="preserve">
+    <value>Bank Address</value>
+  </data>
+  <data name="V_Bank_Details" xml:space="preserve">
+    <value>Bank Details</value>
+  </data>
+  <data name="V_Bank_Name" xml:space="preserve">
+    <value>Bank Name</value>
+  </data>
+  <data name="V_Bank_Ref" xml:space="preserve">
+    <value>Bank Ref</value>
+  </data>
+  <data name="V_Basic_Salary" xml:space="preserve">
+    <value>Basic Salary</value>
+  </data>
+  <data name="V_Bonus" xml:space="preserve">
+    <value>Bonus</value>
+  </data>
+  <data name="V_Bonus_Type" xml:space="preserve">
+    <value>Bonus Type</value>
+  </data>
+  <data name="V_Car_Allowance" xml:space="preserve">
+    <value>Car Allowance</value>
+  </data>
+  <data name="V_Gross_Pay" xml:space="preserve">
+    <value>Gross Pay</value>
+  </data>
   <data name="V_Payroll" xml:space="preserve">
     <value>Payroll</value>
   </data>
+  <data name="V_Payroll_Details" xml:space="preserve">
+    <value>Payroll Details</value>
+  </data>
+  <data name="V_Payroll_Enquire" xml:space="preserve">
+    <value>Make an Enquiry</value>
+  </data>
+  <data name="V_Payroll_Extras" xml:space="preserve">
+    <value>Extras</value>
+  </data>
   <data name="V_Payroll_Number" xml:space="preserve">
     <value>Payroll Number</value>
+  </data>
+  <data name="V_Pay_Type" xml:space="preserve">
+    <value>Pay Type</value>
+  </data>
+  <data name="V_Rate" xml:space="preserve">
+    <value>Rate</value>
+  </data>
+  <data name="V_Salary" xml:space="preserve">
+    <value>Salary Breakdown</value>
+  </data>
+  <data name="V_Sort_Code" xml:space="preserve">
+    <value>Sort Code</value>
+  </data>
+  <data name="V_SS_Number" xml:space="preserve">
+    <value>NI Number</value>
+  </data>
+  <data name="V_Tax_Ref" xml:space="preserve">
+    <value>Tax Reference</value>
   </data>
 </root>
