--- a/totalhr.Resources/Resources/Calendar.resx
+++ b/totalhr.Resources/Resources/Calendar.resx
@@ -138,6 +138,18 @@
   <data name="Day_Wednesday" xml:space="preserve">
     <value>Wednesday</value>
   </data>
+  <data name="Error_CalendarName_Req" xml:space="preserve">
+    <value>The name is required.</value>
+  </data>
+  <data name="Error_CalendarName_Too_Long" xml:space="preserve">
+    <value>The name is too long.</value>
+  </data>
+  <data name="Error_Calendar_Description_Too_Long" xml:space="preserve">
+    <value>The description is too long.</value>
+  </data>
+  <data name="Error_Template_Req" xml:space="preserve">
+    <value>The template is required. Please select a template.</value>
+  </data>
   <data name="Evt_Description" xml:space="preserve">
     <value>Description</value>
   </data>
@@ -195,6 +207,15 @@
   <data name="Month_September" xml:space="preserve">
     <value>September</value>
   </data>
+  <data name="V_Calendar_Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="V_Calendar_Details" xml:space="preserve">
+    <value>Calendar Details</value>
+  </data>
+  <data name="V_Calendar_List" xml:space="preserve">
+    <value>Calendar List</value>
+  </data>
   <data name="V_Calendar_Name" xml:space="preserve">
     <value>Calendar Name</value>
   </data>
@@ -203,6 +224,21 @@
   </data>
   <data name="V_Calendar_View_For" xml:space="preserve">
     <value>Calendar view for: &lt;span class="light"&gt;{0}&lt;/span&gt;</value>
+  </data>
+  <data name="V_Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="V_Company_Calendars" xml:space="preserve">
+    <value>Calendars</value>
+  </data>
+  <data name="V_Created" xml:space="preserve">
+    <value>Created</value>
+  </data>
+  <data name="V_CreatedBy" xml:space="preserve">
+    <value>Created By</value>
+  </data>
+  <data name="V_Create_Calendar" xml:space="preserve">
+    <value>Calendar Create</value>
   </data>
   <data name="V_Day_View" xml:space="preserve">
     <value>Day View</value>
@@ -213,8 +249,23 @@
   <data name="V_Next" xml:space="preserve">
     <value>Next</value>
   </data>
+  <data name="V_No_Calendar" xml:space="preserve">
+    <value>Sorry but there is no calendar to be displayed at the moment. </value>
+  </data>
+  <data name="V_Open_To_All" xml:space="preserve">
+    <value>Public</value>
+  </data>
   <data name="V_Prev" xml:space="preserve">
     <value>Prev</value>
+  </data>
+  <data name="V_Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="V_Template_Id" xml:space="preserve">
+    <value>Template</value>
+  </data>
+  <data name="V_View" xml:space="preserve">
+    <value>View</value>
   </data>
   <data name="V_Week_View" xml:space="preserve">
     <value>Week View</value>
